<resources>
    <string name="app_name">"Poupanca" </string>
    <string name="valor_inicial">" Initial value:"</string>
    <string name="valor_em_r_ex_1700_00">Valor em R$. EX: 1700.00</string>
    <string name="aplica_o_mensal">Aplicação Mensal</string>
    <string name="ex_1000_00">EX: 100.00</string>
    <string name="em_meses">Em Meses</string>
    <string name="ex_0_02">EX 0.02</string>
    <string name="calcular">Calcular</string>
    <string name="tempo_de_aplica_o">Tempo de Aplicação:</string>
    <string name="taxa">Taxa</string>
</resources>
